Add main content layout and restyle AuthForm

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,3 +16,12 @@ code {
 #root {
 	height: 100%;
 }
+
+a {
+  color: #d7a055;
+  text-decoration: none;
+
+  &:hover {
+    color: #edd689;
+  }
+}
