--- a/src/components/Layout/AuthForm/AuthForm.scss
+++ b/src/components/Layout/AuthForm/AuthForm.scss
@@ -10,6 +10,9 @@
 		padding: 60px;
 		box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.4);
 		border-radius: 4px;
+		background-color: #454647;
+		color: #ffffff;
+		
 
 		.auth-form-title {
 			text-transform: capitalize;
