Comments & Updates added

--- a/src/components/Layout/MainContent/Map/Map.scss
+++ b/src/components/Layout/MainContent/Map/Map.scss
@@ -24,19 +24,19 @@
 		width: 50px;
 
 		&-red {
-			color: red
+			color: #ff0000;
 		}
 
 		&-blue {
-			color: blue
+			color: #0000ff;
 		}
 
-		&-orange {
-			color: orange
+		&-purple {
+			color: #e70cd0;
 		}
 
 		&-black {
-			color: black
+			color: #f6f7f8;
 		}
 	}
 }
